2007-04-20  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcelanguagesmanager.c:
	* gtksourceview/gtksourcestylemanager.c:

	Make sure get_[lang|style]_dirs returns dirs in the proper
	priority order.

2006-04-20  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/c.lang: made preprocessor directive
        include string context, so // and /* inside strings do not start
        a comment.

2006-04-20  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcelanguagemanager.[ch]: Made 'lang-files-dirs' a property
        of type G_TYPE_STRV, NULL-terminated string array. Added
        gtk_source_language_manager_set_lang_files_dirs() setter for it.
        * tests/test-widget.c: adapted for the change.

2006-04-20  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/Makefile.am,
        gtksourceview/gtksourcelanguage-parser-1.c,
        gtksourceview/gtksourcelanguage-parser-2.c,
        gtksourceview/gtksourcelanguage-private.h,
        gtksourceview/gtksourcelanguage.c,
        tests/test-widget.c:
        * gtksourcelanguagesmanager.[ch]: removed.
        * gtksourcelanguagemanager.[ch]: new files.
        Renamed GtkSourceLanguagesManager to GtkSourceLanguageManager.

2006-04-17  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/latex.lang: was broken, fixed.

2007-04-17  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/verilog.lang: port to new format.

2007-04-17  Carlos Garnacho  <carlos@imendio.com>

	* gtksourceview/gtksourceview.c (gtk_source_view_undo)
	(gtk_source_view_redo) (gtk_source_view_populate_popup): Do not allow
	undo/redo if the GtkSourceView is not editable. Fixes #418521.

2007-04-16  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcebuffer.c (get_bracket_match_tag),
        (gtk_source_buffer_move_cursor), (update_bracket_match_style),
        gtksourceview/gtksourcebuffer.h: removed gtk_source_buffer_set_bracket_match_style;