@@ -1,3 +1,12 @@
+2007-04-21  Paolo Borelli  <pborelli@katamail.com>
+
+	* gtksourceview/gtksourcelanguage.h:
+	* gtksourceview/gtksourcelanguagemanager.h:
+	* gtksourceview/gtksourcestylemanager.h:
+	* gtksourceview/gtksourceundomanager.h:
+
+	Use G_TYPE_* macros instead of the old GTK_CHECK_* macros.
+
 2007-04-20  Paolo Borelli  <pborelli@katamail.com>
 
 	* gtksourceview/gtksourcelanguagesmanager.c:
